# archenemy

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  compose.yaml  firebase.json  flutter.compose.yaml  pubspec.yaml
.sqlx/: query-018df1676ad0659c3cd3cf268cc6a036bc82273a9f8c9a8eb347e9ec2d4a7271.json  query-02e7362d0b05c22c73966b005a7cd7b8276c6a6432ad7ee60b48d091e0ba7d3c.json  query-2c6ecaff19ae8df296deedad2cab006e96b0a331248893014502517e75465eee.json  query-2cf39b80fd562431757bf5e8de8b9e88334077da0a8f24fa7a31ca8e344e85b4.json  query-356061f2fccab46593a31eb3c44dc3fa935dfc5c64b7123c35c326bb842d2d01.json  query-49488633c6c02aa927a0b56a9edbb7c4a8bd3388c67ac716a3fab5f5d36c420c.json  query-593d3329d3e5092580dac32be8a9669fbb1ab9cc4864992cb63891d6c0b7ae44.json  query-7fe22395d950df57715351d71db78ef912cd839142ef4ba3f16b908d829c00dc.json  query-8b715d47d67bc450b8e8bf3b2e8cef8e323b9be13bb05a8538cf844a245f5024.json  query-9bd9591a9e5426e2cc2c234b79714b9af9f1047f9d6b02ca3b3d583d2a0ef8a1.json  query-a1c93a2016d1fa80f4ae9487d711bda2dfce86e7188cf53034671e7bda1a720f.json  query-a5ba19105c1860af9c95528ded79a6d1a7cc5d7617d2051ec79227b4e7330ccc.json  query-b300d57834124ef8f6811f3e615a13f6334795b5a739696411561cab872080c6.json  query-c89fc0b38c4f4df47eafe2961ebeb1ed25448116c80bd6dfea3244e3e5380f84.json  query-c8fb0bffb573208de39a065ac4775678c904e5fb613cc66de7ecb59397d422a2.json  query-c976137e6c40dc7cdd5f8a3c5fe7d0a7a0eb3f2a9d9bea619e45a07e0e48d0b7.json  query-d88e0a1230fdbc9c206ed88c6a8638b7c0e444015910de03fd96209374b10b86.json  query-e28e08ea4b1198d1d271db080befe22b456d1105102c579afe796fe24ee01474.json  query-e483274ecb41872f1c395972638fd76014d688d1af6f4c6e8aafd59759b782d9.json  query-e78c43290801b5fe6a4a63812cdf114c461c7ccd606954c15a06d9270aced498.json  query-e9b18aa8757a9575778c86b0c66148a9c08a4af7554ac0c9bb94345c92a63260.json  query-ecf8d2fcf2df4d39da5d940f9c5f4b87ba2ec8d210a88dc09f7972711bedf60c.json  query-edbe115e5fe3490358bce92528527d08d43d16a9504d59323f097826f0d37b32.json
android/: google-services.json
lib/: api.dart  app.dart  auth.dart  auth_service.dart  chat_page.dart  explore.dart  firebase_options.dart  log.dart  login.dart  main.dart  matches.dart  profile.dart  samples.dart  settings.dart  splashscreen.dart  theme.dart  theme_config.dart  theme_manager.dart
linux/: CMakeLists.txt
migrations/: 20250213005412_init.down.sql  20250213005412_init.up.sql  20250303000000_fix_schema_add_pgvector.down.sql  20250303000000_fix_schema_add_pgvector.up.sql  20250312000000_combined_init.down.sql  20250312000000_combined_init.up.sql
scripts/: adbinit  seed
seed/: 0x01.seed
src/: auth.rs  lib.rs  (+2 more)
(+41 files in other folders)
