[package]
name = "archenemy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "multipart"] }
firebase-auth = { version = "0.5.0", default-features = false, features = ["axum"] }
pgvector = { version = "0.4.0", features = ["serde", "sqlx"] }
rand = "0.9.0"
rust-s3 = "0.35.1"
serde = { version = "1.0.217", features = ["derive"] }
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
sqlx = { version = "0.8.3", features = ["chrono", "runtime-tokio", "postgres", "tls-native-tls"] }
uuid = { version = "1.14.0", features = ["v4", "fast-rng", "serde"] }

