[package]
name = "archenemy"
version = "0.2.0"
edition = "2021"

[features]
default = ["shuttle-axum", "shuttle-runtime"]
local = ["dotenv", "tokio"]

[dependencies]
axum = { version = "0.8.1", features = ["macros", "multipart"] }
dotenv = {version = "0.15.0", optional = true}
firebase-auth = { version = "0.5.0", default-features = false, features = ["axum"] }
pgvector = { version = "0.4.0", features = ["serde", "sqlx"] }
rand = "0.9.0"
rust-s3 = "0.35.1"
serde = { version = "1.0.217", features = ["derive"] }
shuttle-axum = { version = "0.53.0", optional = true }
shuttle-runtime = { version = "0.53.0", optional = true }
sqlx = { version = "0.8.3", features = ["chrono", "runtime-tokio", "postgres", "tls-native-tls"] }
tokio = {version = "1.44.2", optional = true, features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
uuid = { version = "1.14.0", features = ["v4", "fast-rng", "serde"] }

